fix overflow-hidden moving menu button to the right

--- a/style.css
+++ b/style.css
@@ -48,8 +48,12 @@ html, body {
   width: 100vw;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body.change {
-  overflow: hidden !important;
+  overflow: hidden;
 }
 
 /* Utility */
@@ -126,8 +130,6 @@ section {
   padding: 0 50px;
 }
 
-
-
 .mandala-half, .mandala-half-flip {
   background: url('/assets/mandala-half.png') no-repeat;
   background-size: cover;
@@ -171,11 +173,11 @@ section {
   text-align: center;
 }
 
-
-
 /* Menu Wrap */
 .mobile-overlay {
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: -1;
   flex-direction: column;
   justify-content: center;
@@ -184,10 +186,6 @@ section {
   height: 100%;
   opacity: 0;
   transition: all 1s ease;
-}
-
-.mobile-overlay > div {
-  visibility: hidden;
 }
 
 .mobile-overlay.change {
@@ -201,21 +199,16 @@ section {
   transition: opacity 0.5s ease;
 }
 
+.mobile-overlay > div {
+  visibility: hidden;
+}
+
 .mobile-overlay.change > div {
   visibility: visible;
-  width: 300vw;
-  height: 300vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-
-}
-
-.mobile-overlay.change > div > div {
-  max-width: 90vw;
-  max-height: 100vh;
-
 }
 
 .mobile-overlay.change > div li {
@@ -241,7 +234,7 @@ section {
 
   .navbar {
     width: 100%;
-    padding: 30px 0 40px;
+    padding: 40px 0;
   }
 
   .navbar ul {
@@ -266,11 +259,11 @@ section {
 }
 
 @media only screen and (max-width: 768px) {
-    .navbar {
-      display: none;
-    }
+  .navbar {
+    display: none;
+  }
 
-    .menu-container {
+  .menu-container {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -284,6 +277,10 @@ section {
     z-index: 2;
     top: 20px;
     right: 60px;
+  }
+
+  .mobile-nav.change {
+    right: 77px;
   }
 
   .bar1, .bar2, .bar3 {
@@ -311,7 +308,7 @@ section {
   }
 
   .hero-section {
-    padding: 90px 0 40px;
+    padding: 110px 0 40px;
     max-height: 100vh;
   }
 
